# Embedded_C_2026

./: README.md
Project_P1/: .$Arhitectura_Finala.drawio.bkp  Arhitectura_Finala.drawio  Cerinte.md
Project_P1/C/: CMakeLists.txt  Start_ide.bat
Project_P1/C/sw/: main.c
Project_P1/C/sw/DataTypes/inc/: Types.h
Project_P1/C/sw/FlowControl/inc/: Fcontrol.h  Messages.h
Project_P1/C/sw/FlowControl/src/: Fcontrol.c  MessagesGen.c
